# bazel-tutorial

./: .gitignore  PREREQUISITES.md  README.md
completed/: .gitignore  WORKSPACE
completed/src/androidlib/kotlin/com/morfly/bazel/: AndroidManifest.xml  BUILD.bazel
completed/src/app/: AndroidManifest.xml  BUILD.bazel
completed/src/app/java/com/morfly/bazel/: AndroidManifest.xml  BUILD.bazel  MainActivity.java  Utils.java
completed/src/app/java/com/morfly/bazel/res/layout/: activity_main_v2.xml
completed/src/app/java/com/morfly/bazel/res/values/: colors.xml  strings.xml
completed/src/app/javatests/com/morfly/bazel/: BUILD.bazel  UtilsTest.java
completed/src/jvmlib/kotlin/com/morfly/bazel/: BUILD.bazel  KotlinLibrary.kt
completed/src/jvmlib/kotlintests/com/morfly/bazel/: BUILD.bazel  KotlinLibraryTest.kt
start/src/androidlib/kotlin/com/morfly/bazel/: AndroidLibrary.kt
start/src/app/: AndroidManifest.xml
start/src/app/java/com/morfly/bazel/: AndroidManifest.xml  MainActivity.java  Utils.java
start/src/app/java/com/morfly/bazel/res/layout/: activity_main.xml
start/src/jvmlib/kotlin/com/morfly/bazel/: KotlinLibrary.kt  Library.kt
